<resources>
    <string name="app_name">YourCarSevice</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <!-- Preference Titles -->
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="name_party">Name Party</string>
    <string name="part_update">Date Update</string>
    <string name="car_millage">Car Millage</string>
    <string name="price">Price</string>
    <string name="ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="synchronization_parts">Synchronization parts</string>
    <string name="exit">Exit</string>
    <!-- TODO Setting-->
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme_values">light_theme</string>
    <string name="dark_theme_values">dark_theme</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="work_performed">work performed:</string>
    <string name="title_activity_part">PartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="add_and_edit_fragment">Add And Edit Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>