<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.yourcarsevice.view.MainActivity">
    <item
        android:id="@+id/synchronization"
        android:icon="@drawable/ic_baseline_cloud_upload_24"
        android:orderInCategory="2"
        android:title="@string/synchronization_parts"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/exit_to_app"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:orderInCategory="3"
        android:title="@string/exit"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>